force-app/main/default/objects/C360_UnitConversion__c.object
<CustomObject>
    <fields>
        <fullName>AlternativeUOMText__c</fullName>
        <externalId>true</externalId>
        <label>AlternativeUOMText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeUOM__c</fullName>
        <label>Alternative UOM (Stock-Keeping Unit)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BaseUOM__c</fullName>
        <label>Base Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DenominatorUOM__c</fullName>
        <label>Denominator (Conversion to Base Unit)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <formula>Product__r.MaterialCode__c</formula>
        <label>Material Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeratorUOM__c</fullName>
        <label>Numerator (Conversion to Base Unit)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Unit Conversion</relationshipLabel>
        <relationshipName>Unit_Conversion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Unit Conversion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit Conversion Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>